unpackaged/main/default/objects/CMPL123TMS__TMS_User__c/CMPL123TMS__TMS_User__c.object-meta.xml
<CustomObject>
    <label>TMS User</label>
    <nameField>
        <label>TMS User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TMS Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>