unpackaged/main/default/objects/CMPL123TMS__TMS_User__c/fields/CMPL123TMS__Related_User__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Related_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TMS User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TMS_Related_Users</relationshipName>
        <type>Lookup</type>
    </CustomField>