unpackaged/main/default/objects/CMPL123TMS__TMS_User__c/fields/CMPL123TMS__User_status__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__User_status__c</fullName>
        <label>User Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Away</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>