unpackaged/main/default/objects/CMPL123TMS__TMS_User__c/fields/CMPL123TMS__Vacation_End_Date__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Vacation_End_Date__c</fullName>
        <label>Vacation End Date</label>
        <type>Date</type>
    </CustomField>